--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login">Sign In</string>
     <string name="email">Email</string>
-    <string name="password">Paassword</string>
+    <string name="password">Password</string>
 </resources>
