reset password fragment ui built. Changes made to login fragment
Signed-off-by: James Gitonga <40741293+JayExtra@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="sign_up">Sign Up</string>
     <string name="existing_user">Already have an account? Login</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="back_button_text">Back</string>
+    <string name="send_instructions_reset_password">Send Instructions</string>
+    <string name="reset_password_heading">Reset Password</string>
+    <string name="info_string_reset_password">Enter the email associated with your account and we’ll send an email with instructions to reset your password</string>
+    <string name="email_address_heading_reset_password">Email address</string>
 </resources>
