Added the social login UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="open_email_app_button_text">Open Email App</string>
     <string name="text_for_skip_button">Skip I\'ll confirm later</string>
 
-    // FACEBOOK CREDENTIAL
-    <string name="facebook_app_id">[APP_ID]</string>
-    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
+    <string name="or_sign_up_with">Or sign up with</string>
+    <string name="or_sign_in_with">Or sign in with</string>
+
 </resources>
