--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
 
     <string name="or_sign_up_with">Or sign up with</string>
     <string name="or_sign_in_with">Or sign in with</string>
+    <string name="description_text">This month\'s session will be on Career Change Management. Are you looking to make a leap in your career? Join the session to learn how to hit the ground running and get the most out of your career change.</string>
 
 </resources>
