Navigation Drawer issue #42: - Added navigation drawer to the admin flavour
Signed-off-by: James Gitonga <40741293+JayExtra@users.noreply.github.com>

--- a/app/src/Admin/res/values/strings.xml
+++ b/app/src/Admin/res/values/strings.xml
@@ -1,1 +1,6 @@
-<resources></resources>
+<resources>
+    <string name="username_placeholder">username</string>
+    <string name="add_partners_title">Add Partners</string>
+    <string name="logout_string">Logout</string>
+    <string name="create_event_txt">Create event</string>
+</resources>
